Updated assigning-label with additional labels
Added additional labels that are assigning labels according to the size of the changes.

--- a/.github/assigning-label.yml
+++ b/.github/assigning-label.yml
@@ -3,3 +3,11 @@ documentation:
 
 actions:
 - any: ['.github/**/*']
+
+- label: "Small diff"
+  size-below: 10
+- label: "Medium diff"
+  size-above: 9
+  size-below: 100
+- label: "Large diff"
+  size-above: 100
