--- a/.github/assigning-label.yml
+++ b/.github/assigning-label.yml
@@ -4,10 +4,12 @@ documentation:
 actions:
 - any: ['.github/**/*']
 
-- label: "Small diff"
-  size-below: 10
-- label: "Medium diff"
-  size-above: 9
-  size-below: 100
-- label: "Large diff"
-  size-above: 100
+label: "Small diff"
+- size-below: 10
+
+label: "Medium diff"
+- size-above: 9
+- size-below: 100
+
+label: "Large diff"
+- size-above: 100
