--- a/.github/assigning-label.yml
+++ b/.github/assigning-label.yml
@@ -4,24 +4,12 @@ documentation:
 actions:
 - any: ['.github/**/*']
 
-size/XS:
-- size-below: 10
-
-size/S:
-- size-above: 9
-- size-below: 30
-
-size/M:
-- size-above: 29
-- size-below: 100
-
-size/L:
-- size-above: 99
-- size-below: 500
-
-size/XL:
-- size-above: 499
-- size-below: 1000
-
-size/XXL:
-- size-above: 1000
+sizes: >
+  {
+    "0": "XS",
+    "20": "S",
+    "50": "M",
+    "200": "L",
+    "800": "XL",
+    "2000": "XXL"
+  }
