modifications for troubleshooting of automated testing

--- a/.github/assigning-label.yml
+++ b/.github/assigning-label.yml
@@ -2,7 +2,7 @@ documentation:
 - any: ['documentation/**/*']
 
 test:
-- any: ['test/**/*']
+- any: ['test.py']
 
 actions:
 - any: ['.github/**/*']
