--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Hello @contributor_name , thank you for you first commit!'
-        pr-message: 'This is the first commit of @contributor_name' 
+        issue-message: 'Hello @${{ github.actor }} , thank you for you first commit!'
+        pr-message: 'This is the first commit of @${{ github.actor }}' 
