--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -43,7 +43,7 @@ jobs:
       url: 'http://test.myapp.com'
     steps:
       - name: Deploy
-        run: echo Your code is being deployed to staging at http://test.myapp.com
+        run: echo "Deploying to production server on branch $GITHUB_REF"
   
 # Our deployment to production job
 
