--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Compile
-        run: echo Imagine we are compling our code here!
+        if: ${{ github.event_name == 'pull_request' && github.event.action == 'unassigned' }}
+        run: echo Imagine we are compling our code here, however an assignee was removed!
 
   DeployDev:
     name: Deploy to Dev
